--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1 class="e_name">Eric Furukawa</h1>
         <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
