MV Product push, removed temp pics , decided against text scaling, comments still present

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span class="bolded">Hobbies: </span>Game Development, Video Games, Digital Art, Guitar, Board & Card Games, Running & Hiking<br><br><br>
                 <a href="contact.html"><span class="bolded_link">Contact Me!</span></a></p>
             <p class="end_thing">Let's Make Some Cool Stuff</p>
-            <div id="side_img_r1"></div>
+            <!--<div id="side_img_r1"></div>-->
             <div class="parallax">
                 <div class="parallax_layer">
                     <div class="front_layer">
