--- a/ramblings.html
+++ b/ramblings.html
@@ -18,7 +18,7 @@
             <h1 class="blog_name">Linear Potato</h1>
             <p class="blog_description">Welcome to the Linear Potato blog! I may post here ocassionally about some interest tangents I travel down.<br><br>
             Any posts here are more just for me to geek about my current interests rather than trying to reach any consistent readership, so posts may be irregular in timing and subject matter.</p>
-            <!--<div id="side_img_r1"></div>-->
+            <div id="side_img_r1"></div>
             <div id="blog_links">
                 <a href="blog_post1.html">Update Post #1: Linear Potato Launcher - 3/16/2022</a>
             </div>
