Added Webpage Titles

--- a/blog_post1.html
+++ b/blog_post1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang = "en">
     <head>
+        <title>Update Post #1: Linear Potato Launcher - 3/16/2022</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
