--- a/ramblings.html
+++ b/ramblings.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang = "en">
     <head>
+        <title>Linear Potato | A Geek/Programmer's Tangential Blog</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
