Dev blog post 1

--- a/ramblings.html
+++ b/ramblings.html
@@ -21,6 +21,9 @@
             Any posts here are more just for me to geek about my current interests rather than trying to reach any consistent readership, so posts may be irregular in timing and subject matter.</p>
             <div id="side_img_r1"></div>
             <div id="blog_links">
+                <a href="blog_post_dev1.html">Game Dev Post #1: Prototype Graveyard: A Post Mortem - 3/23/2022</a>
+            </div>
+            <div id="blog_links">
                 <a href="blog_post1.html">Update Post #1: Linear Potato Launcher - 3/16/2022</a>
             </div>
             <div id="bottom">
