--- a/ramblings.html
+++ b/ramblings.html
@@ -17,9 +17,14 @@
         </div>
         <div class="large_div">
             <h1 class="blog_name">Linear Potato</h1>
-            <p class="blog_description">Welcome to the Linear Potato blog! I may post here ocassionally about some interest tangents I travel down.<br><br>
-            Any posts here are more just for me to geek about my current interests rather than trying to reach any consistent readership, so posts may be irregular in timing and subject matter.</p>
+            <p class="blog_description">
+                Welcome to the Linear Potato blog! I may post here ocassionally about some interest tangents I travel down.<br><br>
+                Any posts here are more just for me to geek about my current interests rather than trying to reach any consistent readership, so posts may be irregular in timing and subject matter.
+            </p>
             <div id="side_img_r1"></div>
+            <div id="blog_links">
+                <a href="blog_post2.html">Update Post #2: 1999 Problems But A Keyboard Ain't One - 4/5/2022</a>
+            </div>
             <div id="blog_links">
                 <a href="blog_post_dev1.html">Game Dev Post #1: Prototype Graveyard: A Post Mortem - 3/23/2022</a>
             </div>
