--- a/ramblings.html
+++ b/ramblings.html
@@ -23,6 +23,9 @@
             </p>
             <div id="side_img_r1"></div>
             <div id="blog_links">
+                <a href="blog_post_small1.html">Update Post #3: Ugly UI warning! You have been warned! - 5/19/2022</a>
+            </div>
+            <div id="blog_links">
                 <a href="blog_post2.html">Update Post #2: 1999 Problems But A Keyboard Ain't One - 4/5/2022</a>
             </div>
             <div id="blog_links">
