Spacing added to blog links, minor blog mini 1 corrections

--- a/blog_post_small1.html
+++ b/blog_post_small1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang = "en">
     <head>
-        <title>Update Post #3: Ugly UI warning! You have been warned! - 5/19/2022</title>
+        <title>Update Post #3: Ugly UI Warning! You Have Been Warned! - 5/19/2022</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
@@ -17,7 +17,7 @@
         </div>
         <div class="large_div">
             <h1 class="blog_name">Linear Potato</h1>
-            <h1 class="blog_post_name">Update Post #3:<br>Ugly UI warning! You have been warned!<br>5/19/2022</h1>
+            <h1 class="blog_post_name">Update Post #3:<br>Ugly UI Warning! You Have Been Warned!<br>5/19/2022</h1>
             <p class="blog_text">
                 Another month and a half has already passed! I've been quite busy between job applications, game dev, and practicing guitar.<br>
 
@@ -25,7 +25,7 @@
                 Ugly UI warning! You have been warned!<br><br>
 
                 My game dev progress has been a little bit slower than I would like (of course). Progress has at least been fairly consistent of late. I try to make sure I accomplish progress in some of my other
-                goals like job searching beforehand. I had a conversation recently that actually pointed out a fatal mistake I may be making and that's to document my progress! I'll try to post at least some
+                goals like job searching beforehand. I had a conversation recently that actually pointed out a fatal mistake I may be making and that's that I have no visual aids to document my progress! I'll try to post at least some
                 images to go along with my progress.<br><br>
 
                 I have some base mechanics down, with a system in place to allow me to add puzzle elements with configurable interactions between them all. For example, I could make a rock that pushes pebbles,
