Minor sentence swap in mini blog 1

--- a/blog_post_small1.html
+++ b/blog_post_small1.html
@@ -33,8 +33,10 @@
             </p>
             <div id="pull_push_demo_gif"></div>
             <p class="blog_text">
-                I also have some very ugly, but usable UI that I can build off of. My most recent step was adding in a main menu, pause menu, and binary serializer for saving the game. I am currently spinning
+                My most recent step was adding in a main menu, pause menu, and binary serializer for saving the game. I am currently spinning
                 my wheels on deciding when and how progress should be saved (savepoint, after puzzle completion, via main menu, when the game exits).
+                <br><br>
+                I also have some very ugly, but usable UI that I can build off of.
             </p>
             <div id="ui_reaction_1_img"></div>
             <div id="title_screen_img"></div>
@@ -71,6 +73,9 @@
                 In Utero - Nirvana (1993)<br>
                 Violent Femmes - Violent Femmes (1983)<br>
                 Humbug - Arctic Monkeys (2009)<br>
+
+                <br>
+                Well that's all for now!
             </p>
             <div id="rectangle"></div>
             <div id="bottom">
