Refactored CSS pages, file organization, separated blog, format changes and professionalism

--- a/blogposts/blog_post1.html
+++ b/blogposts/blog_post1.html
@@ -5,29 +5,34 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="styles_blog_post.css">
         <link rel="stylesheet" href="styles_blog_post1.css">
+        <link rel="stylesheet" href="../navbar.css">
     </head>
     <body class="blog_post">
-        <div id="navbar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="ramblings.html">Linear Potato</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </ul>
-        </div>
-        <div class="large_div">
-            <h1 class="blog_name">Linear Potato</h1>
-            <h1 class="blog_post_name">Update Post #1: Linear Potato Launcher<br>3/16/2022</h1>
-            <p class="blog_text">
-                Well here’s my first blog post! (We’ll see how long it lasts) I created this webpage to serve primarily as a portfolio site. I’m hoping including some “fun” additions to the site such as this doesn’t subtract from any of the professionalism of the portfolio portion. Regardless, this was great a great opportunity for me to brush up on my front end HTML, CSS and Javascript skills. Of course, the internet provided plenty of tutorials and advice to help me along the way.<br><br>
-                There were some super interesting decisions along the way to make. I really wanted to put in a unique (albeit ironically overdone) element to the website to make it stand out. I thought I could take the parallax screen seen on webpages like for the video game Firewatch (<a href="https://www.firewatchgame.com">see here</a>) but put it at the bottom of the page. This would make it a bit more original and hopefully serve as a less distracting end note rather than a loud attention sponge. I also originally wanted to handwrite my name on the front page, but decided against it after going down a rabbit hole of why Comic Sans is considered a very unprofessional font.<br><br>
-                The blog name is really dumb, I know. But I think that’s why I like it. My first idea was “Potangent” as it would combine my online alias “Potassio”, the word Potato and the word Cotangent, to refer to the tangential nature of the blog. However, the name seemed too nerdy, similar to a slang word and part of the name of a Yu-Gi-Oh card apparently (<a href=https://yugipedia.com/wiki/Potan>see here</a>). So Linear Potato it is. I read online that a good way to come up with a blog name is to choose two completely unrelated words anyways.<br><br>
-                Regarding my aims for the blog, I’m hoping to post about video game releases, my game development, music, board games and whatever else has my interest at the time. I’m not sure what the rules are exactly about posting on the topic of intellectual properties, so I’ll need to look into that. I’m assuming though posting on the topic of them must be fine as there are so many others doing the same either as journalists or independent media (not to mention I don’t have remotely have any plans of monetizing this). I’ll be trying to steer away from any serious talk including politics, controversies or super deep ruminations.<br><br>
-                My writing skills are also pretty basic, and the posts will definitely reflect that. Perhaps this blog will assist me in improving! Ther will no dobt be penty o typos scttered troughout as wel.  I think it will be interesting to see any visible improvement in blogging as well changes in my taste/interests.<br><br>
-                I can already tell that this post is rambling! I’ll need to work on that along with keeping the post concise and only as long as it needs to be.<br><br>
-                How do I end a blog post? There’s no button to do that… Uh… BLOG END.<br><br>(SUCCESS: Potato Has Been Launched Into The Vast Void Of The Interwebs)
-                
-            </p>
+        <div class="flex-wrapper">
+            <div id="navbar">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../projects.html">Projects</a></li>
+                    <li><a href="../contact.html">Contact Me</a></li>
+                </ul>
+            </div>
+            <div class="large_div">
+                <h1 class="blog_name">Linear Potato</h1>
+                <h1 class="blog_post_name">Update Post #1: Linear Potato Launcher<br>3/16/2022</h1>
+                <p class="blog_text">
+                    Well here’s my first blog post! (We’ll see how long it lasts) I created this webpage to serve primarily as a portfolio site. I’m hoping including some “fun” additions to the site such as this doesn’t subtract from any of the professionalism of the portfolio portion. Regardless, this was great a great opportunity for me to brush up on my front end HTML, CSS and Javascript skills. Of course, the internet provided plenty of tutorials and advice to help me along the way.<br><br>
+                    There were some super interesting decisions along the way to make. I really wanted to put in a unique (albeit ironically overdone) element to the website to make it stand out. I thought I could take the parallax screen seen on webpages like for the video game Firewatch (<a href="https://www.firewatchgame.com">see here</a>) but put it at the bottom of the page. This would make it a bit more original and hopefully serve as a less distracting end note rather than a loud attention sponge. I also originally wanted to handwrite my name on the front page, but decided against it after going down a rabbit hole of why Comic Sans is considered a very unprofessional font.<br><br>
+                    The blog name is really dumb, I know. But I think that’s why I like it. My first idea was “Potangent” as it would combine my online alias “Potassio”, the word Potato and the word Cotangent, to refer to the tangential nature of the blog. However, the name seemed too nerdy, similar to a slang word and part of the name of a Yu-Gi-Oh card apparently (<a href=https://yugipedia.com/wiki/Potan>see here</a>). So Linear Potato it is. I read online that a good way to come up with a blog name is to choose two completely unrelated words anyways.<br><br>
+                    Regarding my aims for the blog, I’m hoping to post about video game releases, my game development, music, board games and whatever else has my interest at the time. I’m not sure what the rules are exactly about posting on the topic of intellectual properties, so I’ll need to look into that. I’m assuming though posting on the topic of them must be fine as there are so many others doing the same either as journalists or independent media (not to mention I don’t have remotely have any plans of monetizing this). I’ll be trying to steer away from any serious talk including politics, controversies or super deep ruminations.<br><br>
+                    My writing skills are also pretty basic, and the posts will definitely reflect that. Perhaps this blog will assist me in improving! Ther will no dobt be penty o typos scttered troughout as wel.  I think it will be interesting to see any visible improvement in blogging as well changes in my taste/interests.<br><br>
+                    I can already tell that this post is rambling! I’ll need to work on that along with keeping the post concise and only as long as it needs to be.<br><br>
+                    How do I end a blog post? There’s no button to do that… Uh… BLOG END.<br><br>(SUCCESS: Potato Has Been Launched Into The Vast Void Of The Interwebs)
+                    
+                </p>
+            </div>
             <div id="side_img_r1_parallax">
                 <div id="side_img_r1"></div>
             </div>
