--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,39 @@
 <!DOCTYPE HTML>
 <html lang = "en">
     <head>
-        <title>Contact Eric</title>
+        <title>Eric Furukawa | Contact</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="styles_contact.css">
+        <link rel="stylesheet" href="navbar.css">
     </head>
     <body class="contact_info">
-        <div id="navbar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="ramblings.html">Linear Potato</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </ul>
-        </div>
-        <div class="large_div">
-            <h1 class="contact_name">Contact</h1>
-            <h2 class="contact_header">Contact Information</h1>
-            <p class="contact_text">
-                <span class="bolded">Email:</span> furukawa.em@gmail.com
-            </p>
-            <h2 class="link_header">Links</h1>
+        <div class="flex-wrapper">
+            <div id="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                </ul>
+            </div>
+            <div class="large_div">
+                <h1 class="contact_name">Contact</h1>
+                <h2 class="contact_header"><br>Communication</h2>
+                <p class="contact_text">
+                    <span class="bolded">Email:</span> furukawa.em@gmail.com
+                </p>
+                <h2 class="link_header"><br>External Links</h2>
                 <div id="links">
                     <p><span class="bolded">LinkedIn:</span> <a href="https://www.linkedin.com/in/eric-furukawa-849b72132/">https://www.linkedin.com/in/eric-furukawa-849b72132/</a></p>
-                    <p><span class="bolded">GitHub:</span> <a href="https://github.com/LePotassio">https://github.com/LePotassio/</a></p>
+                    <p><span class="bolded">Github:</span> <a href="https://github.com/LePotassio">https://github.com/LePotassio/</a></p>
                 </div>
+                <h2 class="link_header"><br>Personal Interests Site</h2>
+                <div id="links">
+                    <p><span class="bolded">Homepage:</span> <a href="ramblings.html">https://lepotassio.github.io/ramblings.html</a></p>
+                </div>
+            </div>
             <div id="bottom">
                 <p>Eric Furukawa, 2022<p>
             </div>
