Added profile, swapped blog pst navabrs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             </div>
             <div class="large_div">
                 <h1 class="e_name">Eric Furukawa</h1>
-                <p class="bio">I am a computer science master's student and game developer based in Bellevue, Washington. My love for playing video games has grown into a passion for designing and programming them using the Unity game engine. I'm eager to apply my enthusiasm for programming, critical thinking, and teamwork to create meaningful software experiences.<br><br><br></p>
+                <div class="bio_profile_container">
+                    <p class="bio">Hi, I'm Eric<br><br>I am a computer science master's student and game developer based in Bellevue, Washington. My love for playing video games has grown into a passion for designing and programming them using the Unity game engine. I'm eager to apply my enthusiasm for programming, critical thinking, and teamwork to create meaningful software experiences.<br><br><br></p>
+                    <img src="images/profile_temp.jpg" alt="Profile Picture" class="profile_picture">
+                </div>
                 <p class="description"><span class="info_Section_Text">Education:</span><br>BS Computer Science - Washington State University 2021<br><br></p>
                 <hr class="info_Divider">
                 <p class="description"><span class="info_Section_Text">Primary Programming Skills:</span><br>C#, Unity, .NET<br><br></p>
@@ -30,6 +33,8 @@
                 <hr class="info_Divider">
                 <p class="description"><span class="info_Section_Text">Game Development and Play Interests: </span><br>Rogue-Like, Narrative, Puzzle, Deck-Builder, Simulation, Survival Crafting, City-Builder, Edutainment, Procedural<br><br></p>
                 <p class="description"><span class="info_Section_Text">Hobbies: </span><br>Game Development, Video Games, Digital Art, Guitar, Board & Card Games, Running & Hiking<br><br><br></p>
+                <p class="description"><a href="files\Furukawa_Resume.pdf" download="Furukawa_Resume.pdf"><span class="bolded_link">Resume</span></a></p>
+                <p class="description"><a href="contact.html"><span class="bolded_link">Contact Information</span></a></p>
             </div>
             <div id="rectangle"></div>
             <div id="bottom">
