--- a/blogposts/blog_post_dev1.html
+++ b/blogposts/blog_post_dev1.html
@@ -14,9 +14,8 @@
         <div class="flex-wrapper">
             <div id="navbar">
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../projects.html">Projects</a></li>
-                    <li><a href="../contact.html">Contact Me</a></li>
+                    <li><a href="../ramblings.html">Linear Potato</a></li>
+                    <li><a href="../index.html">Portfolio</a></li>
                 </ul>
             </div>
             <div class="large_div">
