Front page formatting and typo corrections

--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
             <div class="large_div">
                 <h1 class="e_name">Eric Furukawa</h1>
                 <div class="bio_profile_container">
-                    <p class="bio">Hi, I'm Eric<br><br>I am a computer science master's student and game developer based in Bellevue, Washington. My love for playing video games has grown into a passion for designing and programming them using the Unity game engine. I'm eager to apply my enthusiasm for programming, critical thinking, and teamwork to create meaningful software experiences.<br><br><br></p>
+                    <p class="bio">Hi, I'm Eric.<br><br>I am a computer science master's student and game developer based in Issaquah, Washington.<br><br>My love for playing video games has grown into a passion for designing and programming them using the Unity game engine. I'm eager to apply my enthusiasm for programming, critical thinking, and teamwork to create meaningful software experiences.<br><br><br></p>
                     <img src="images/profile_temp.jpg" alt="Profile Picture" class="profile_picture">
                 </div>
-                <p class="description"><span class="info_Section_Text">Education:</span><br>BS Computer Science - Washington State University 2021<br><br></p>
+                <p class="description"><span class="info_Section_Text">Education:</span><br><span class="bolded">BS Computer Science, Minor in Mathematics</span><br>Washington State University - August 2017 to July 2021<br><br></p>
                 <hr class="info_Divider">
-                <p class="description"><span class="info_Section_Text">Primary Programming Skills:</span><br>C#, Unity, .NET<br><br></p>
-                <p class="description"><span class="info_Section_Text">Secondary Programming Skills:</span><br>C, C++, Python, Java, HTML, CSS, Javascript, PostGreSQL, Git<br><br></p>
-                <p class="description"><span class="info_Section_Text">Other Technologies:</span><br>Krita, Aesprite<br><br></p>
-                <p class="description"><span class="info_Section_Text">Skills:</span><br>Highly Adaptable, Team Player, Creative Thinking, Practical Mindset<br><br></p>
+                <p class="description"><span class="info_Section_Text">Primary Programming Skills:</span><br>C#, Unity, 2D Game Development<br><br></p>
+                <p class="description"><span class="info_Section_Text">Secondary Programming Skills:</span><br>C, C++, Python, Java, HTML, CSS, Javascript, PostGreSQL, Git, Unit Testing, .NET Framework<br><br></p>
+                <p class="description"><span class="info_Section_Text">Other Technologies:</span><br>Krita, Aseprite<br><br></p>
+                <p class="description"><span class="info_Section_Text">Soft Skills:</span><br>Highly Adaptable, Team Player, Effective Communicator, Creative Thinker, Thorough, Practical Mindset, Enthusiastic<br><br></p>
+                <p class="description"><span class="info_Section_Text">Languages:</span><br>English (Native), Japanese (Basic)<br><br></p>
                 <hr class="info_Divider">
+                <p class="description"><span class="info_Section_Text">Technology Interests:</span><br>Game Development, Emergent Narratives in Games, Computer Science Education, Games for Learning, Human-Computer-Interaction, Fullstack Development, Artificial Intelligence<br><br></p>
                 <p class="description"><span class="info_Section_Text">Game Development and Play Interests: </span><br>Rogue-Like, Narrative, Puzzle, Deck-Builder, Simulation, Survival Crafting, City-Builder, Edutainment, Procedural<br><br></p>
-                <p class="description"><span class="info_Section_Text">Hobbies: </span><br>Game Development, Video Games, Digital Art, Guitar, Board & Card Games, Running & Hiking<br><br><br></p>
+                <p class="description"><span class="info_Section_Text">Hobbies: </span><br>Game Development, Video Games, Digital Art, Guitar, Board & Card Games, Running & Hiking, Travel<br><br><br></p>
                 <p class="description"><a href="files\Furukawa_Resume.pdf" download="Furukawa_Resume.pdf"><span class="bolded_link">Resume</span></a></p>
                 <p class="description"><a href="contact.html"><span class="bolded_link">Contact Information</span></a></p>
             </div>
